macro/tests/ui/invalid_grammar_missing_start.stderr
error: expected `mod`
 --> tests/ui/invalid_grammar_missing_start.rs:4:5
  |
4 | pub struct Grammar {
  |     ^^^^^^
